# django-training

./: .gitignore  README.md  pyproject.toml
musicplatform/: conftest.py  pytest.ini
musicplatform/accounts/: urls.py  views.py
musicplatform/accounts/templates/: base.html  login.html
musicplatform/album/: admin.py  filters.py  forms.py  models.py  serializers.py  tasks.py  urls.py  views.py
musicplatform/album/migrations/: 0001_initial.py  0002_song.py  0003_alter_song_name.py  0004_song_audio.py  0005_alter_song_audio.py  0006_alter_song_audio.py  0007_alter_song_audio.py  0008_alter_song_img.py
musicplatform/album/tests/: test_serializers.py  test_views.py
musicplatform/artists/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py  widget.py
musicplatform/artists/migrations/: 0001_initial.py  0002_alter_artist_social_link.py  0003_alter_artist_stage.py  0004_alter_album_name_alter_artist_stage.py  0005_album_album_is_approved.py  0006_artist_assgin_alter_album_album_is_approved.py  0007_alter_artist_assgin.py  0008_remove_artist_assgin.py  0009_remove_album_pub_date_album_created_album_modified.py  0010_alter_album_release.py  0011_alter_album_name.py  0012_alter_album_name.py  0013_alter_album_name.py  0014_alter_album_release.py  0015_delete_album.py  0016_artist_user.py  0017_alter_artist_user.py
musicplatform/authentication/: serializers.py  urls.py  views.py
musicplatform/musicplatform/: celery.py  settings.py  urls.py
musicplatform/user/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
(+9 files in other folders)
