[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["yousef ahmed <yousef.amer5453@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-model-utils = "^4.2.0"
django-imagekit = "^4.1.0"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
