[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["yousef ahmed <yousef.amer5453@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
django-model-utils = "^4.2.0"
django-imagekit = "^4.1.0"
pillow = "^9.2.0"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
django-rest-knox = "^4.2.0"
pytest-django = "^4.5.2"
requests = "^2.28.1"
django-filter = "^22.1"
celery = "^5.2.7"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
